--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,10 +21,10 @@
     <ion-item-sliding *ngFor="let item of todos">
       <ion-item lines="inset" button [routerLink]="['/details', item.id]">
         <ion-label>
-          {{item.task}}
-          <p> {{item.createdAt | date:'short'}} </p>
+          {{item.conta}}
+          <p> Data de pagamento: todo o dia {{item.dataPagamento | date:'dd'}} do mês.</p>
         </ion-label>
-        <ion-note slot="end" color="primary">{{item.priority}}</ion-note>
+        <ion-note slot="end" color="primary">R$ {{item.valorConta}}</ion-note>
       </ion-item>
 
       <ion-item-options side="end">
